@@ -17,58 +17,51 @@ import java.util.ArrayList;
 @Setter
 public class Register extends JFrame {
 
-    int amountPanels = 3;
-    int amountLabels = 5;
-    int amountTextFields = 3;
-    int amountPasswordFields = 1;
-    int amountButtons = 1;
-    int amountCheckBox = 1;
-    int amountCombos = 1;
+    // Constants for the number of panels, labels, text fields, etc.
+    private final int AMOUNT_PANELS = 3;
+    private final int AMOUNT_LABELS = 5;
+    private final int AMOUNT_TEXT_FIELDS = 3;
+    private final int AMOUNT_PASSWORD_FIELDS = 1;
+    private final int AMOUNT_BUTTONS = 1;
+    private final int AMOUNT_CHECK_BOX = 1;
+    private final int AMOUNT_COMBOS = 1;
 
-    ArrayList<JPanel> panels = new ArrayList<>();
-    ArrayList<JLabel> labels = new ArrayList<>();
-    ArrayList<JTextField> textFields = new ArrayList<>();
-    ArrayList<JPasswordField> passwordFields = new ArrayList<>();
-    ArrayList<JButton> buttons = new ArrayList<>();
-    ArrayList<JCheckBox> checks = new ArrayList<>();
-    ArrayList<JComboBox> combos = new ArrayList<>();
-    RegisterTexts model = new RegisterTexts();
+    // Lists to store Swing components
+    private ArrayList<JPanel> panels = new ArrayList<>();
+    private ArrayList<JLabel> labels = new ArrayList<>();
+    private ArrayList<JTextField> textFields = new ArrayList<>();
+    private ArrayList<JPasswordField> passwordFields = new ArrayList<>();
+    private ArrayList<JButton> buttons = new ArrayList<>();
+    private ArrayList<JCheckBox> checks = new ArrayList<>();
+    private ArrayList<JComboBox> combos = new ArrayList<>();
+
+    // Model for text content
+    private RegisterTexts model = new RegisterTexts();
+
+    // Reference to the MainController
     private MainController mainController;
 
     public Register(MainController mainController) {
         this.mainController = mainController;
-        // Creación de elementos de la ventana
-        createPanels(amountPanels);
-        createLabels(amountLabels);
-        createTextField(amountTextFields);
-        createPasswordField(amountPasswordFields);
-        createButtons(amountButtons);
-        createCheckBox(amountCheckBox);
-        createCombos(amountCombos);
+        // Create Swing components
+        createPanels();
+        createLabels();
+        createTextField();
+        createPasswordField();
+        createButtons();
+        createCheckBox();
+        createCombos();
 
-        // Visualización de elementos en ventana
-        ordenateAll();
+        // Arrange and display components in the window
+        organizeAll();
         settings();
     }
 
-
-
-    private void ordenateAll() {
+    private void organizeAll() {
         combinePanels();
         addTitle();
         addTLTV();
         addButtons();
-    }
-
-    private void addCheckBox() {
-        panels.get(1).add(checks.get(0));
-    }
-
-    private void addTitle() {
-        Font titleFont = new Font("Arial", Font.BOLD, 24);
-        JLabel titleLabel = labels.get(0);
-        titleLabel.setFont(titleFont);
-        panels.get(0).add(titleLabel);
     }
 
     private void combinePanels() {
@@ -86,8 +79,8 @@ public class Register extends JFrame {
     }
 
     private void addTLTV() {
-        for (int i = 1; i < amountLabels; i++) {
-            if (i != amountLabels - 1) {
+        for (int i = 1; i < AMOUNT_LABELS; i++) {
+            if (i != AMOUNT_LABELS - 1) {
                 panels.get(1).add(labels.get(i));
                 panels.get(1).add(textFields.get(i - 1));
             } else {
@@ -101,13 +94,12 @@ public class Register extends JFrame {
 
     private void addCombo() {
         panels.get(1).add(new JLabel(model.getTextsList().get(5)));
-        panels.get(1).add(combos.get(0));
+        panels.get(1).add(combos.getFirst());
     }
 
     private void addPassword() {
         panels.get(1).add(new JLabel(model.getTextsList().get(4)));
-        panels.get(1).add(passwordFields.get(0));
-
+        panels.get(1).add(passwordFields.getFirst());
     }
 
     private void addRegisterLink() {
@@ -119,21 +111,32 @@ public class Register extends JFrame {
     }
 
     private void addButtons() {
-        panels.get(1).add(buttons.get(0));
+        panels.get(1).add(buttons.getFirst());
     }
 
-    private void createPanels(int max) {
-        for (int i = 0; i < max; i++) {
+    private void addCheckBox() {
+        panels.get(1).add(checks.getFirst());
+    }
+
+    private void addTitle() {
+        Font titleFont = new Font("Arial", Font.BOLD, 24);
+        JLabel titleLabel = labels.getFirst();
+        titleLabel.setFont(titleFont);
+        panels.getFirst().add(titleLabel);
+    }
+
+    private void createPanels() {
+        for (int i = 0; i < AMOUNT_PANELS; i++) {
             JPanel panel = new JPanel();
             panels.add(panel);
         }
     }
 
-    private void createTextField(int max) {
-        for (int i = 0; i < max; i++) {
+    private void createTextField() {
+        for (int i = 0; i < AMOUNT_TEXT_FIELDS; i++) {
             JTextField textField;
             if (i == 0) {
-                textField = new JTextField(9);  // Aplicar filtro al DNI
+                textField = new JTextField(9);  // Apply filter to DNI
                 ((AbstractDocument) textField.getDocument()).setDocumentFilter(new DocumentFilter() {
                     @Override
                     public void insertString(FilterBypass fb, int offset, String string, AttributeSet attr) throws BadLocationException {
@@ -157,44 +160,46 @@ public class Register extends JFrame {
         }
     }
 
-    private void createPasswordField(int max) {
-        for (int i = 0; i < max; i++) {
+    private void createPasswordField() {
+        for (int i = 0; i < AMOUNT_PASSWORD_FIELDS; i++) {
             JPasswordField passwordField = new JPasswordField(20);
             passwordFields.add(passwordField);
         }
     }
 
-    private void createLabels(int max) {
-        for (int i = 0; i < max; i++) {
+    private void createLabels() {
+        for (int i = 0; i < AMOUNT_LABELS; i++) {
             JLabel label = new JLabel(model.getTextsList().get(i));
             labels.add(label);
         }
     }
 
-    private void createButtons(int max) {
-        for (int i = 0; i < max; i++) {
-            JButton button = new JButton(model.getTextsList().get(model.getTextsList().size() - 1));
+    private void createButtons() {
+        for (int i = 0; i < AMOUNT_BUTTONS; i++) {
+            JButton button = new JButton(model.getTextsList().getLast());
             buttons.add(button);
-            buttons.get(0).setEnabled(false);
+            buttons.getFirst().setEnabled(false);
 
             Font buttonFont = new Font("Arial", Font.BOLD, 16);
             button.setFont(buttonFont);
-            button.setBackground(new Color(255, 215, 0));  // Dorado
+            button.setBackground(new Color(255, 215, 0));  // Set button background color to gold
         }
     }
 
-
-    private void createCheckBox(int max) {
-        for (int i = 0; i < max; i++) {
+    private void createCheckBox() {
+        for (int i = 0; i < AMOUNT_CHECK_BOX; i++) {
             JCheckBox checkBox = new JCheckBox(model.getTextsList().get(7));
             checks.add(checkBox);
         }
     }
 
-    private void createCombos(int max) {
-        mainController.getMainConnection().openConnection(mainController.getMainConnectionModel().getMYSQL_URL(), mainController.getMainConnectionModel().getMYSQL_DATABASE(), mainController.getMainConnectionModel().getMYSQL_USERNAME(), mainController.getMainConnectionModel().getPASSWORD());
+    private void createCombos() {
+        mainController.getMainConnection().openConnection(mainController.getMainConnectionModel().getMYSQL_URL(),
+                mainController.getMainConnectionModel().getMYSQL_DATABASE(),
+                mainController.getMainConnectionModel().getMYSQL_USERNAME(),
+                mainController.getMainConnectionModel().getPASSWORD());
 
-        for (int i = 0; i < max; i++) {
+        for (int i = 0; i < AMOUNT_COMBOS; i++) {
             JComboBox<String> combo = new JComboBox<>(mainController.getMainConnection().getLawyerNames().toArray(new String[0]));
             combo.insertItemAt("", 0);
             combo.setSelectedIndex(0);
@@ -207,11 +212,13 @@ public class Register extends JFrame {
     private void settings() {
         ImageIcon icon = new ImageIcon("target/classes/assets/icon_app.jpg");
         setIconImage(icon.getImage());
-        Dimension pantalla = Toolkit.getDefaultToolkit().getScreenSize();
-        int height = pantalla.height;
-        int width = pantalla.width;
-        this.setSize(width / 4, height - 200);
-        this.setTitle("Register Bufete");
+
+        Dimension screen = Toolkit.getDefaultToolkit().getScreenSize();
+        int screenHeight = screen.height;
+        int screenWidth = screen.width;
+
+        this.setSize(screenWidth / 4, screenHeight - 200);
+        this.setTitle(model.getTitle());
         this.setLocationRelativeTo(null);
         this.setResizable(true);
         this.setDefaultCloseOperation(EXIT_ON_CLOSE);
